--- a/package.json
+++ b/package.json
@@ -1,29 +1,18 @@
 {
-  "name": "real-estate",
-  "version": "0.1.0",
+  "name": "real-estate-monorepo",
+  "version": "1.0.0",
   "private": true,
+  "workspaces": [
+    "apps/*",
+    "packages/*"
+  ],
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@hookform/resolvers": "^3.0.0",
-    "eslint": "8.36.0",
-    "eslint-config-next": "13.2.4",
-    "next": "^14.2.21",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.9",
-    "react-icons": "^4.8.0",
-    "react-toastify": "^9.1.2",
-    "yup": "^1.0.2"
+    "dev": "turbo run dev",
+    "build": "turbo run build",
+    "start": "turbo run start",
+    "lint": "turbo run lint"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.7"
+    "turbo": "latest"
   }
-}
+} 
